TPratico v0.1 - Save alterações nos Component

--- a/JavaDoc - Package logicircuit/logicircuit/package-summary.html
+++ b/JavaDoc - Package logicircuit/logicircuit/package-summary.html
@@ -100,7 +100,7 @@
 <tr class="altColor">
 <td class="colFirst"><a href="../logicircuit/LCDFrameCmd.html" title="class in logicircuit">LCDFrameCmd</a></td>
 <td class="colLast">
-<div class="block">A window with a panel to draw the circuit and a text filed to read commands.</div>
+<div class="block">A window with a panel to draw the circuit and a text filed to read Commands.</div>
 </td>
 </tr>
 <tr class="rowColor">
