--- a/JavaDoc - Package logicircuit/logicircuit/LCDFrameCmd.html
+++ b/JavaDoc - Package logicircuit/logicircuit/LCDFrameCmd.html
@@ -108,7 +108,7 @@ var activeTableTab = "activeTableTab";
 <br>
 <pre>public class <span class="typeNameLabel">LCDFrameCmd</span>
 extends java.lang.Object</pre>
-<div class="block">A window with a panel to draw the circuit and a text filed to read commands.</div>
+<div class="block">A window with a panel to draw the circuit and a text filed to read Commands.</div>
 </li>
 </ul>
 </div>
